test: 숙소 서비스 테스트 리팩토링 [AIR-127]
숙소 준비 작업 @Test 로 이동